Fixed scrollbar; Fixed Chrome list id new line bug

--- a/css/basic.css
+++ b/css/basic.css
@@ -3,7 +3,10 @@
 }
 
 ::-webkit-scrollbar {
+  -webkit-appearance: none;
   display: none;
+  width: 0;
+  height: 0;
 }
 
 body {
